tests/cases/scc/error/0013-macro.c.res
./tests/cases/scc/error/0013-macro.c:4:1:	error:   too few arguments provided.
exit code 1
